--- a/2.html
+++ b/2.html
@@ -4,6 +4,16 @@
 	<head>
 		<TITLE> WEB 1 - CSS </TITLE>
 		<meta charset = "uth-8">
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-156364463-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-156364463-1');
+</script>
+
   </head>
 
 		<body>
