--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
 		<TITLE> WEB 1 - JAVASCRIPT </TITLE>
 		<meta charset = "uth-8">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-156364463-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-156364463-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
 
-  gtag('config', 'UA-156364463-1');
-</script>
+		  gtag('config', 'UA-156364463-1');
+		</script>
+		<style>
 
-  </head>
-	<body>
+		a { 
+
+		color : red; 
+
+		}
+
+	</style>
+  	</head>
+<body>
 			<H1><a href="index.html"> WEB </a></H1>
 			<ol>
 				<li> <a href = "1.html"> HTML </a></li>
