--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<H1><a href="index.html"> WEB </a></H1>
 			<ol>
 				<li> <a href = "1.html"> HTML </a></li>
-				<li> <a href = "2.html"> CSS </a></li>
+				<li> <a href = "2.html" style="color:red"> CSS </a></li>
 				<li> <a href = "3.html"> JAVASCRIPT </a></li>
 			</ol>
 			<p>
